...
                android:id="@+id/follower_options_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/button_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/fredoka_normal"
                    android:text="@string/meetup_filter_show_all" />

                <RadioButton
                    android:id="@+id/participate_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/fredoka_normal"
                    android:text="@string/meetup_filter_only_participating" />

                <RadioButton
                    android:id="@+id/created_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/fredoka_normal"
                    android:text="@string/meetup_only_creators" />

                <RadioButton
                    android:id="@+id/joinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/fredoka_normal"
                    android:text="@string/meetup_filter_only_joined" />

...
                    android:fontFamily="@font/fredoka_normal"
                    android:singleLine="true"
                    app:counterMaxLength="60" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/filtersButtonDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="12dp"
                android:text="@string/meetup_filter_done" />

...
