<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <SearchView
            android:id="@+id/search_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </SearchView>

        <Button
            android:id="@+id/sort_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/list_sort_menu" />

        <ImageButton
            android:id="@+id/search_place"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:src="@android:drawable/ic_dialog_map"
            android:backgroundTint="?attr/colorPrimaryVariant"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <com.google.android.material.slider.Slider
        android:id="@+id/distance_slider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:valueFrom="1.0"
        android:valueTo="500.0">

    </com.google.android.material.slider.Slider>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/list_select_tag"
        android:name="com.github.palFinderTeam.palfinder.tags.TagsDisplayFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        tools:layout="@layout/fragment_tags_display" />

    <Button
        android:id="@+id/select_filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_margin="8dp"
        android:text="@string/meetup_filter_btn"
        app:layout_constraintBottom_toTopOf="@id/list_select_tag"
        app:layout_constraintEnd_toStartOf="@+id/search_place"
        app:layout_constraintLeft_toRightOf="@id/sort_list"
        app:layout_constraintTop_toBottomOf="@id/list_select_tag" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/meetup_list_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>