<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_sort_cap"
        android:title="@string/list_sort_by_capacity" />
    <item
        android:id="@+id/menu_sort_name"
        android:title="@string/list_sort_by_alphabetical_order" />
    <item
        android:id="@+id/menu_sort_loc"
        android:title="@string/list_sort_by_location" />
    <item
        android:id="@+id/menu_sort_trend"
        android:title="@string/meetup_filter_trend" />
</menu>
