<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/find_nav_graph"
    app:startDestination="@id/maps_fragment">

    <fragment
        android:id="@+id/list_fragment"
        android:name="com.github.palFinderTeam.palfinder.meetups.meetupList.MeetupListFragment"
        tools:layout="@layout/activity_list"
        android:label="MeetupListActivity">
        <argument
            android:name="ShowNavBar"
            android:defaultValue="true"
...
