package com.github.palFinderTeam.palfinder.meetups

import android.content.res.Resources
import android.icu.text.SimpleDateFormat
import android.icu.util.Calendar
import android.os.Bundle
import android.view.View
import android.widget.DatePicker
import android.widget.TimePicker
import androidx.lifecycle.ViewModelStore
import androidx.navigation.testing.TestNavHostController
import androidx.recyclerview.widget.RecyclerView
import androidx.test.core.app.ApplicationProvider
import androidx.test.espresso.Espresso
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.action.ViewActions.scrollTo
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.contrib.PickerActions
import androidx.test.espresso.intent.Intents.*
import androidx.test.espresso.intent.matcher.IntentMatchers.hasComponent
import androidx.test.espresso.matcher.BoundedMatcher
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.internal.runner.junit4.statement.UiThreadStatement.runOnUiThread
import com.github.palFinderTeam.palfinder.R
import com.github.palFinderTeam.palfinder.UIMockMeetUpRepositoryModule
import com.github.palFinderTeam.palfinder.meetups.meetupRepository.MeetUpRepository
import com.github.palFinderTeam.palfinder.meetups.meetupList.MeetupListFragment
import com.github.palFinderTeam.palfinder.meetups.meetupView.MeetUpView
import com.github.palFinderTeam.palfinder.profile.services.ProfileService
import com.github.palFinderTeam.palfinder.profile.ProfileUser
import com.github.palFinderTeam.palfinder.profile.UIMockProfileServiceModule
import com.github.palFinderTeam.palfinder.tags.Category
import com.github.palFinderTeam.palfinder.utils.*
import com.github.palFinderTeam.palfinder.utils.image.ImageInstance
import com.github.palFinderTeam.palfinder.utils.time.TimeService
import dagger.hilt.android.testing.HiltAndroidRule
import dagger.hilt.android.testing.HiltAndroidTest
import kotlinx.coroutines.ExperimentalCoroutinesApi
import kotlinx.coroutines.test.runTest
import org.hamcrest.CoreMatchers.`is`
import org.hamcrest.CoreMatchers.anyOf
import org.hamcrest.Description
import org.hamcrest.Matcher
import org.hamcrest.MatcherAssert.assertThat
import org.hamcrest.Matchers
import org.hamcrest.TypeSafeMatcher
import org.junit.After
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import javax.inject.Inject


@ExperimentalCoroutinesApi
@HiltAndroidTest
class MeetUpListTest {

    private lateinit var dateNow: Calendar
    private lateinit var date1: Calendar
    private lateinit var date2: Calendar
    private lateinit var date3: Calendar
    private lateinit var date4: Calendar
    private lateinit var meetUpList: List<MeetUp>
    private lateinit var user1: String
    private lateinit var user2: String
    private lateinit var user3: ProfileUser
    private lateinit var navController: TestNavHostController

    private val searchLocation = Location(-122.0, 37.0)
    lateinit var loggedUserId: ProfileUser

    @get:Rule
    val hiltRule = HiltAndroidRule(this)

    @Inject
    lateinit var meetUpRepository: MeetUpRepository

    @Inject
    lateinit var profileService: ProfileService

    @Inject
    lateinit var realTimeService: TimeService

    @Before
    fun setup() {
        dateNow = Calendar.getInstance()
        dateNow.set(2022,0,0)
        date1 = Calendar.getInstance()
        date1.set(2022, 2, 6)
        date2 = Calendar.getInstance()
        date2.set(2022, 1, 8)
        date3 = Calendar.getInstance()
        date3.set(2022, 2, 1)
        date4 = Calendar.getInstance()
        date4.set(2022, 0, 1)

        hiltRule.inject()
        loggedUserId = ProfileUser("loggedUser", "dfdf", "dfdsfds",
            "efsf",date1, ImageInstance("efe"), following = listOf("user2Id") )

        (meetUpRepository as UIMockMeetUpRepositoryModule.UIMockRepository).clearDB()
        (profileService as UIMockProfileServiceModule.UIMockProfileService).setLoggedInUserID(
            loggedUserId.uuid
        )

        (realTimeService as UIMockTimeServiceModule.UIMockTimeService).setDate(dateNow)

        //user1 = ProfileUser("User1", "Us", "er1", date1, ImageInstance("icons/demo_pfp.jpeg"))
        //user2 = ProfileUser("User2", "Us", "er2", date2, ImageInstance("icons/demo_pfp.jpeg"))

        user1 = "user1Id"
        user2 = "user2Id"
        user3 = ProfileUser("user3Id", "dfdf", "dfdsfds", "efsf",date1, ImageInstance("efe"), blockedUsers = listOf(user1))


        meetUpList = listOf(
            MeetUp(
                iconImage = null,
                name = "cuire des carottes",
                description = "nous aimerions bien nous atteler à la cuisson de carottes au beurre",
                startDate = date1,
                endDate = date2,
                location = Location(-122.0, 38.0),
                tags = setOf(Category.DRINKING),
                capacity = 45,
                creatorId = user1,
                hasMaxCapacity = true,
                participantsId = listOf(
                    user2,
                    loggedUserId.uuid
                ),
                uuid = "ce",
                criterionAge = null,
                criterionGender = null
            ),
            MeetUp(
                iconImage = null,
                name = "cuire des patates",
                description = "nous aimerions bien nous atteler à la cuisson de patates au beurre",
                startDate = date2,
                endDate = date1,
                location = Location(-122.0, 38.0),
                tags = setOf(Category.WORKING_OUT, Category.SPORTS),
                capacity = 48,
                creatorId = user1,
                hasMaxCapacity = true,
                participantsId = listOf(
                    user2
                ),
                uuid = "ce",
                criterionAge = null,
                criterionGender = null
            ),
            MeetUp(
                iconImage = null,
                name = "Street workout",
                description = "workout pepouse au pont chauderon",
                startDate = date3,
                endDate = date1,
                location = Location(-122.0, 38.0),
                tags = setOf(Category.DRINKING),
                capacity = 9,
                creatorId = user2,
                hasMaxCapacity = true,
                participantsId = listOf(
                    user1
                ),
                uuid = "ce",
                criterionAge = null,
                criterionGender = null
            ),
            MeetUp(
                iconImage = null,
                name = "Van Gogh Beaulieux",
                description = "Expo sans tableau c'est bo",
                startDate = date4,
                endDate = date1,
                location = Location(-122.0, 37.0),
                tags = setOf(Category.DRINKING),
                capacity = 15,
                creatorId = user1,
                hasMaxCapacity = true,
                participantsId = listOf(
                    user1
                ),
                uuid = "ce",
                criterionAge = null,
                criterionGender = null
            ),
            MeetUp(
                iconImage = null,
                name = "Palexpo",
                description = "popopo",
                startDate = date4,
                endDate = date2,
                location = Location(-122.0, 38.0),
                tags = setOf(Category.DRINKING),
                capacity = 13,
                creatorId = user1,
                hasMaxCapacity = true,
                participantsId = listOf(
                    user2
                ),
                uuid = "ce2",
                criterionAge = null,
                criterionGender = null
            ),
        )

        runOnUiThread {
            navController = TestNavHostController(ApplicationProvider.getApplicationContext())
            navController.setViewModelStore(ViewModelStore())
            navController.setGraph(R.navigation.main_nav_graph)
            navController.setCurrentDestination(R.id.list_fragment)
        }
    }

    @After
    fun cleanUp() {
        (meetUpRepository as UIMockMeetUpRepositoryModule.UIMockRepository).clearDB()
    }

    @Test
    fun testDisplayActivities() = runTest {
        meetUpList.forEach { meetUpRepository.create(it) }

        val scenario = launchFragmentInHiltContainer<MeetupListFragment>(Bundle().apply {
            putBoolean("ShowOnlyJoined", false)
        }, navHostController = navController)

        scenario!!.use {
            scenario.onHiltFragment<MeetupListFragment> {
                it.viewModel.setSearchParameters(location = searchLocation)
                it.viewModel.fetchMeetUps()
            }

            onView(
                RecyclerViewMatcher(R.id.meetup_list_recycler).atPositionOnView(
                    0,
                    R.id.meetup_title
                )
            )
                .check(matches(withText(meetUpList[0].name)))
            onView(
                RecyclerViewMatcher(R.id.meetup_list_recycler).atPositionOnView(
                    0,
                    R.id.meetup_description
                )
            )
                .check(matches(withText(meetUpList[0].description)))
        }
    }

    @Test
    fun sortWorks() = runTest {
        meetUpList.forEach { meetUpRepository.create(it) }

        val scenario = launchFragmentInHiltContainer<MeetupListFragment>(Bundle().apply {
            putBoolean("ShowOnlyJoined", false)
        }, navHostController = navController)
        scenario!!.use {
            scenario.onHiltFragment<MeetupListFragment> {
                it.viewModel.setSearchParameters(location = searchLocation, radiusInKm = 10000.0)
                it.viewModel.fetchMeetUps()
            }
            onView(withId(R.id.sort_list)).perform(click())
            onView(withText(R.string.list_sort_by_capacity)).perform(click())

            onView(
                RecyclerViewMatcher(R.id.meetup_list_recycler).atPositionOnView(
                    0,
                    R.id.meetup_title
                )
            )
                .check(matches(withText(meetUpList.sortedBy { it.capacity }[0].name)))
            onView(withId(R.id.sort_list)).perform(click())
            onView(withText(R.string.list_sort_by_alphabetical_order)).perform(click())
            onView(
                RecyclerViewMatcher(R.id.meetup_list_recycler).atPositionOnView(
                    0,
                    R.id.meetup_title
                )
            )
                .check(matches(withText(meetUpList.sortedBy { it.name.lowercase() }[0].name)))

            onView(withId(R.id.sort_list)).perform(click())
            onView(withText(R.string.list_sort_by_location)).perform(click())
            onView(
                RecyclerViewMatcher(R.id.meetup_list_recycler).atPositionOnView(
                    0,
                    R.id.meetup_title
                )
            )
                .check(matches(withText(meetUpList.sortedBy {
                    it.location.distanceInKm(
                        searchLocation
                    )
                }[0].name)))
        }
    }


    @Test
    fun filterWorks() = runTest {
        meetUpList.forEach { meetUpRepository.create(it) }

        val scenario = launchFragmentInHiltContainer<MeetupListFragment>(Bundle().apply {
            putBoolean("ShowOnlyJoined", false)
        }, navHostController = navController)

        scenario!!.use {
            scenario.onHiltFragment<MeetupListFragment> { listFrag ->
                listFrag.viewModel.setSearchParameters(location = searchLocation)
                listFrag.viewModel.fetchMeetUps()
            }
            scenario.onHiltFragment<MeetupListFragment> { listFrag ->
                listFrag.viewModel.tagRepository.addTag(Category.CINEMA)
            }
            scenario.onHiltFragment<MeetupListFragment> { listFrag ->
                assert(listFrag.adapter.currentDataSet.isEmpty())
                listFrag.viewModel.tagRepository.removeTag(Category.CINEMA)
            }
            scenario.onHiltFragment<MeetupListFragment> { listFrag ->
                listFrag.viewModel.tagRepository.addTag(Category.WORKING_OUT)
            }
            scenario.onHiltFragment<MeetupListFragment> { listFrag ->
                assertThat(listFrag.adapter.currentDataSet.size, `is`(1))
                listFrag.viewModel.tagRepository.removeTag(Category.WORKING_OUT)
            }
            scenario.onHiltFragment<MeetupListFragment> { listFrag ->
                assertThat(listFrag.adapter.currentDataSet.size, `is`(5))
            }
        }
    }

    @Test
    fun filterWorksAddTag() = runTest {
        meetUpList.forEach { meetUpRepository.create(it) }

        val scenario = launchFragmentInHiltContainer<MeetupListFragment>(Bundle().apply {
            putBoolean("ShowOnlyJoined", false)
        }, navHostController = navController)

        scenario!!.use {
            scenario.onHiltFragment<MeetupListFragment> { listFrag ->
                listFrag.viewModel.setSearchParameters(location = searchLocation)
                listFrag.viewModel.fetchMeetUps()
            }
            scenario.onHiltFragment<MeetupListFragment> { listFrag ->
                listFrag.viewModel.tagRepository.addTag(Category.CINEMA)
            }
            scenario.onHiltFragment<MeetupListFragment> { listFrag ->
                assert(listFrag.adapter.currentDataSet.isEmpty())
                listFrag.viewModel.tagRepository.removeTag(Category.CINEMA)
            }
            scenario.onHiltFragment<MeetupListFragment> { listFrag ->
                assertThat(listFrag.adapter.currentDataSet.size, `is`(5))
                listFrag.viewModel.tagRepository.removeTag(Category.CINEMA)
            }
            scenario.onHiltFragment<MeetupListFragment> { listFrag ->
                assertThat(listFrag.adapter.currentDataSet.size, `is`(5))
                listFrag.viewModel.tagRepository.addTag(Category.WORKING_OUT)
            }
            scenario.onHiltFragment<MeetupListFragment> { listFrag ->
                assertThat(listFrag.adapter.currentDataSet.size, `is`(1))
                listFrag.viewModel.tagRepository.addTag(Category.WORKING_OUT)
            }
            scenario.onHiltFragment<MeetupListFragment> { listFrag ->
                assertThat(listFrag.adapter.currentDataSet.size, `is`(1))
            }
        }
    }

    @Test
    fun clickItem() = runTest {
        meetUpList.forEach { meetUpRepository.create(it) }

        val scenario = launchFragmentInHiltContainer<MeetupListFragment>(Bundle().apply {
            putBoolean("ShowOnlyJoined", false)
        }, navHostController = navController)

        scenario!!.use {
            init()
            scenario.onHiltFragment<MeetupListFragment> {
                it.viewModel.setSearchParameters(location = searchLocation)
                it.viewModel.fetchMeetUps()
            }
            onView(
                RecyclerViewMatcher(R.id.meetup_list_recycler).atPositionOnView(
                    0,
                    R.id.meetup_title
                )
            ).perform(click())
            intended(hasComponent(MeetUpView::class.java.name))
            release()
        }
    }

    @Test
    fun openMap() {
        val scenario = launchFragmentInHiltContainer<MeetupListFragment>(Bundle().apply {
            putBoolean("ShowOnlyJoined", false)
        }, navHostController = navController)

        scenario!!.use {
            scenario.onHiltFragment<MeetupListFragment> {
                it.viewModel.setSearchParameters(location = searchLocation)
                it.viewModel.fetchMeetUps()
            }

            onView(withId(R.id.search_place)).perform(click())

            assertThat(navController.currentDestination?.id, `is`(R.id.maps_fragment))
        }
    }

    @Test
    fun showJoinedMeetupsOnlyShowJoinedMeetUps() = runTest {
        meetUpList.forEach { meetUpRepository.create(it) }

        val scenario = launchFragmentInHiltContainer<MeetupListFragment>(Bundle().apply {
            putSerializable("ShowParam", ShowParam.ONLY_JOINED)
        }, navHostController = navController)

        scenario!!.use {

            val joinedMeetUps = meetUpList.filter { it.participantsId.contains(loggedUserId.uuid) }
                .map { withText(it.name) }

            onView(withId(R.id.meetup_list_recycler)).check(
                matches(
                    recyclerViewSizeMatcher(
                        joinedMeetUps.size
                    )
                )
            )
            for (i in (joinedMeetUps.indices)) {
                onView(
                    RecyclerViewMatcher(R.id.meetup_list_recycler).atPositionOnView(
                        i,
                        R.id.meetup_title
                    )
                )
                    .check(matches(anyOf(joinedMeetUps)))
            }
        }
    }

    @Test
    fun showPalParticipatingAndCreatorWorks() = runTest {
        meetUpList.forEach { meetUpRepository.create(it) }
        val id = profileService.create(loggedUserId)
        (profileService as UIMockProfileServiceModule.UIMockProfileService).setLoggedInUserID(
           id
        )


        val scenario = launchFragmentInHiltContainer<MeetupListFragment>(Bundle().apply {
            putSerializable("ShowParam", ShowParam.ALL)
        }, navHostController = navController)

        scenario!!.use {
            scenario.onHiltFragment<MeetupListFragment> {
                it.viewModel.setSearchParameters(location = searchLocation)
                it.viewModel.fetchMeetUps()
            }

            onView(withId(R.id.select_filters)).perform(click())
            onView(withId(R.id.participate_button)).perform(click())
            onView(withId(R.id.filtersButtonDone)).perform(scrollTo(), click())
            var palMeetUps = meetUpList.filter { it.participantsId.intersect(loggedUserId.following).isNotEmpty() }
                .map { withText(it.name) }

            onView(withId(R.id.meetup_list_recycler)).check(
                matches(
                    recyclerViewSizeMatcher(
                        palMeetUps.size
                    )
                )
            )
            for (i in (palMeetUps.indices)) {
                onView(
                    RecyclerViewMatcher(R.id.meetup_list_recycler).atPositionOnView(
                        i,
                        R.id.meetup_title
                    )
                )
                    .check(matches(anyOf(palMeetUps)))
            }
            onView(withId(R.id.select_filters)).perform(click())
            onView(withId(R.id.created_button)).perform(click())
            onView(withId(R.id.filtersButtonDone)).perform(scrollTo(), click())
            palMeetUps = meetUpList.filter { loggedUserId.following.contains(it.creatorId) }
                .map { withText(it.name) }

            onView(withId(R.id.meetup_list_recycler)).check(
                matches(
                    recyclerViewSizeMatcher(
                        palMeetUps.size
                    )
                )
            )
            for (i in (palMeetUps.indices)) {
                onView(
                    RecyclerViewMatcher(R.id.meetup_list_recycler).atPositionOnView(
                        i,
                        R.id.meetup_title
                    )
                )
                    .check(matches(anyOf(palMeetUps)))
            }
            onView(withId(R.id.select_filters)).perform(click())
            onView(withId(R.id.button_all)).perform(scrollTo(), click())
            onView(withId(R.id.filtersButtonDone)).perform(scrollTo(), click())
            onView(withId(R.id.meetup_list_recycler)).check(
                matches(
                    recyclerViewSizeMatcher(
                        meetUpList.size
                    )
                )
            )
        }
    }

    @Test
    fun showFilterBlockedWorks() = runTest {
        meetUpList.forEach { meetUpRepository.create(it) }
        val user3Id = profileService.create(user3)
        (profileService as UIMockProfileServiceModule.UIMockProfileService).setLoggedInUserID(
            user3Id!!
        )

        val scenario = launchFragmentInHiltContainer<MeetupListFragment>(Bundle().apply {
            putBoolean("ShowOnlyJoined", false)
        }, navHostController = navController)

        scenario!!.use {

            scenario.onHiltFragment<MeetupListFragment> {
                it.viewModel.setSearchParamAndFetch(location = searchLocation, filterBlockedMeetups = true, forceFetch = true)
            }

            val availableMeetUps = meetUpList.filter { it.creatorId != user1 }
                .map { withText(it.name) }

            onView(withId(R.id.meetup_list_recycler)).check(
                matches(
                    recyclerViewSizeMatcher(
                        availableMeetUps.size
                    )
                )
            )
            for (i in (availableMeetUps.indices)) {
                onView(
                    RecyclerViewMatcher(R.id.meetup_list_recycler).atPositionOnView(
                        i,
                        R.id.meetup_title
                    )
                )
                    .check(matches(anyOf(availableMeetUps)))
            }
        }

        (profileService as UIMockProfileServiceModule.UIMockProfileService).setLoggedInUserID(
            loggedUserId.uuid
        )
    }

    @Test
    fun radioButtonReflectRightOptionOnStart() = runTest {
        var scenario = launchFragmentInHiltContainer<MeetupListFragment>(Bundle().apply {
            putSerializable("ShowParam", ShowParam.ONLY_JOINED)
        }, navHostController = navController)
        scenario!!.use {
            onView(withId(R.id.select_filters)).perform(click())
            onView(withId(R.id.joinedButton)).check(matches(isChecked()))
        }
        scenario = launchFragmentInHiltContainer<MeetupListFragment>(Bundle().apply {
            putSerializable("ShowParam", ShowParam.ALL)
        }, navHostController = navController)
        scenario!!.use {
            onView(withId(R.id.select_filters)).perform(click())
            onView(withId(R.id.button_all)).check(matches(isChecked()))
        }
        scenario = launchFragmentInHiltContainer<MeetupListFragment>(Bundle().apply {
            putSerializable("ShowParam", ShowParam.PAL_CREATOR)
        }, navHostController = navController)
        scenario!!.use {
            onView(withId(R.id.select_filters)).perform(click())
            onView(withId(R.id.created_button)).check(matches(isChecked()))
        }
        scenario = launchFragmentInHiltContainer<MeetupListFragment>(Bundle().apply {
            putSerializable("ShowParam", ShowParam.PAL_PARTICIPATING)
        }, navHostController = navController)
        scenario!!.use {
            onView(withId(R.id.select_filters)).perform(click())
            onView(withId(R.id.participate_button)).check(matches(isChecked()))
        }
    }

    @Test
    fun radioButtonFiltersWorkAsExpected() = runTest {

        meetUpList.forEach { meetUpRepository.create(it) }

        val scenario = launchFragmentInHiltContainer<MeetupListFragment>(Bundle().apply {
            putSerializable("ShowParam", ShowParam.ALL)
        }, navHostController = navController)

        scenario!!.use {
            onView(withId(R.id.select_filters)).perform(click())
            onView(withId(R.id.joinedButton)).perform(click())
            Espresso.pressBack()
            val joinedMeetUps = meetUpList.filter { it.participantsId.contains(loggedUserId.uuid) }
                .map { withText(it.name) }

